--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,12 @@ services:
     depends_on:
       - config-server
   postgres:
-    image: postgres:16.2
+    build:
+      context: ../postgres
     restart: always
     ports:
       - 5432:5432
     shm_size: 128mb
-    environment:
-      POSTGRES_PASSWORD_FILE: /run/secrets/postgres/password
-      POSTGRES_USER_FILE: /run/secrets/postgres/user
-      POSTGRES_DB_FILE: /run/secrets/postgres/db
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./secrets/databases/postgres/:/run/secrets/postgres/
