--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - 8080:8080
     environment:
       - POSTGRES_URL=jdbc:postgresql://postgres/ostock
+      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_CLOUD_CONFIG_URI=http://config-server:8071
     volumes:
       - ./:/app
     depends_on:
