--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - ./:/app
     depends_on:
       - config-server
+      - postgres
   postgres:
     build:
       context: ../postgres
@@ -31,6 +32,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./secrets/databases/postgres/:/run/secrets/postgres/
+      - ../postgres/scripts:/docker-entrypoint-initdb.d
   adminer:
     image: adminer:4.8.1
     restart: always
