--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - GIT_USERNAME_FILE=/run/secrets/git/username
       - GIT_PASSWORD_FILE=/run/secrets/git/password
       - SPRING_CLOUD_CONFIG_SERVER_GIT_URI=https://github.com/biya-bi/ostock-configs
-      - SPRING_CLOUD_CONFIG_SERVER_GIT_SEARCHPATHS=licensing-service
+      - SPRING_CLOUD_CONFIG_SERVER_GIT_SEARCHPATHS=*
       - SPRING_CLOUD_CONFIG_SERVER_GIT_DEFAULTLABEL=main
     volumes:
       - ./secrets/dev/config-server/encrypt_key:/run/secrets/encrypt_key
