Add the organization service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,22 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+  organization-service:
+    build:
+      context: ../organization-service
+      target: run
+    ports:
+      - 9090:8080
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8071
+    volumes:
+      - ./:/app
+    depends_on:
+      config-service:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
   postgres:
     build:
       context: ../postgres
