--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8071
+      - EUREKA_URI=http://eureka-service:8070/eureka
     volumes:
       - ./:/app
     depends_on:
@@ -62,6 +63,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8071
+      - EUREKA_URI=http://eureka-service:8070/eureka
     volumes:
       - ./:/app
     depends_on:
