Mount the JWT issuer uri file for the gateway-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,8 +118,10 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8080
       - EUREKA_URI=http://eureka-service:8080/eureka
+      - JWT_ISSUER_URI_FILE=/run/secrets/env/jwt_issuer_uri
     volumes:
       - ./:/app
+      - ./secrets/dev/env/:/run/secrets/env/
     depends_on:
       config-service:
         condition: service_healthy
