--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,5 +123,31 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+  angular-service:
+    build:
+      context: ../angular-service
+    ports:
+      - 4200:4200
+  notification-service:
+    build:
+      context: ../notification-service
+      target: run
+    restart: always
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8080
+      - EUREKA_URI=http://eureka-service:8080/eureka
+      - JWT_ISSUER_URI_FILE=/run/secrets/keycloak/jwt_issuer_uri
+      - VAPID_PRIVATE_KEY_FILE=/run/secrets/vapid/private_key
+      - VAPID_PUBLIC_KEY_FILE=/run/secrets/vapid/public_key
+    volumes:
+      - ./:/app
+      - ./secrets/dev/keycloak/:/run/secrets/keycloak/
+      - ./secrets/dev/notifications/vapid/:/run/secrets/vapid/
+    depends_on:
+      config-service:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
 volumes:
   postgres_data:
