--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,10 +53,10 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8080
       - EUREKA_URI=http://eureka-service:8080/eureka
-      - JWT_ISSUER_URI_FILE=/run/secrets/env/jwt_issuer_uri
+      - JWT_ISSUER_URI_FILE=/run/secrets/keycloak/jwt_issuer_uri
     volumes:
       - ./:/app
-      - ./secrets/dev/env/:/run/secrets/env/
+      - ./secrets/dev/keycloak/:/run/secrets/keycloak/
     depends_on:
       config-service:
         condition: service_healthy
@@ -71,10 +71,10 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8080
       - EUREKA_URI=http://eureka-service:8080/eureka
-      - JWT_ISSUER_URI_FILE=/run/secrets/env/jwt_issuer_uri
+      - JWT_ISSUER_URI_FILE=/run/secrets/keycloak/jwt_issuer_uri
     volumes:
       - ./:/app
-      - ./secrets/dev/env/:/run/secrets/env/
+      - ./secrets/dev/keycloak/:/run/secrets/keycloak/
     depends_on:
       config-service:
         condition: service_healthy
@@ -116,10 +116,10 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8080
       - EUREKA_URI=http://eureka-service:8080/eureka
-      - JWT_ISSUER_URI_FILE=/run/secrets/env/jwt_issuer_uri
+      - JWT_ISSUER_URI_FILE=/run/secrets/keycloak/jwt_issuer_uri
     volumes:
       - ./:/app
-      - ./secrets/dev/env/:/run/secrets/env/
+      - ./secrets/dev/keycloak/:/run/secrets/keycloak/
     depends_on:
       config-service:
         condition: service_healthy
